--- a/index.html
+++ b/index.html
@@ -8,22 +8,21 @@
     <link rel="stylesheet" href="assets/styles/main.css" />
     <link rel="stylesheet" href="assets/styles/mapSection.css" />
     <link rel="stylesheet" href="assets/styles/table.css" />
-    <script src="./assets/scripts/test.js" type="module" defer></script>
+    <script src="/src/test.js" type="module" defer></script>
 
     <!-- GOOGLE CHART -->
     <script
       type="text/javascript"
       src="https://www.gstatic.com/charts/loader.js"
     ></script>
-    <script src="./assets/scripts/graph.js" type="module" defer></script>
+    <script src="/src/graph.js" type="module" defer></script>
 
     <!-- GOOGLE CHART END -->
     <script
       src="https://use.fontawesome.com/releases/v5.15.3/js/all.js"
       data-auto-replace-svg="nest"
     ></script>
-    <script src="assets/scripts/app.js" type="module" defer></script>
-    <script src="assets/scripts/calender.js" defer type="module"></script>
+    <script src="src/app.js" type="module" defer></script>
   </head>
   <body>
     <!-- Navbar Sidebar -->
@@ -908,55 +907,13 @@
         <div class="calender">
           <div class="days">
             <button id="left"><i class="fas fa-chevron-left"></i></button>
-            <ul>
-              <li>MO</li>
-              <li>TU</li>
-              <li>WE</li>
-              <li>TH</li>
-              <li>FR</li>
-              <li>SA</li>
-              <li>SU</li>
-            </ul>
+            <div class="month-div"><h4>July</h4></div>
+            <div class="year-div"><h4>2020</h4></div>
+
             <button id="right"><i class="fas fa-chevron-right"></i></button>
           </div>
           <div class="dates">
-            <ul>
-              <li>1</li>
-              <li>2</li>
-              <li>3</li>
-              <li>4</li>
-              <li>5</li>
-              <li>6</li>
-              <li>7</li>
-              <li>8</li>
-              <li>9</li>
-              <li>10</li>
-              <li>11</li>
-              <li>12</li>
-              <li>13</li>
-              <li>14</li>
-              <li>15</li>
-              <li>16</li>
-              <li>17</li>
-              <li>18</li>
-              <li>19</li>
-              <li>20</li>
-              <li>21</li>
-              <li>22</li>
-              <li>23</li>
-              <li>24</li>
-              <li>25</li>
-              <li>26</li>
-              <li>27</li>
-              <li>28</li>
-              <li>29</li>
-              <li>30</li>
-              <li>31</li>
-              <li></li>
-              <li></li>
-              <li></li>
-              <li></li>
-            </ul>
+            <ul></ul>
           </div>
         </div>
       </div>
