Almost Complete Graph left

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         </div>
       </nav>
     </header>
+    <!-- Loading Modal -->
+    <div class="loading-modal">
+      <h1>Loading</h1>
+    </div>
     <!-- Navbar Sidebar End-->
     <section class="map-section">
       <div class="map-section-heading">
@@ -4737,6 +4741,7 @@
             <button id="right"><i class="fas fa-chevron-right"></i></button>
           </div>
           <div class="dates">
+            <div class="calender-loading-modal"><h1>Loading</h1></div>
             <ul></ul>
           </div>
         </div>
@@ -4789,16 +4794,12 @@
       </div>
       <div class="cases-info-section-part-3">
         <div class="graph">
-          <div id="curve_chart" style="width: 450px; height: 350px"></div>
+          <div id="curve_chart"></div>
         </div>
         <div class="added">
           <span></span>
           <p class="added-heading">Added</p>
           <p class="added-date">28 March</p>
-        </div>
-        <div class="cases-section-three-btn">
-          <button>Add to Compare</button>
-          <button>Delete</button>
         </div>
       </div>
     </section>
