Counter and Search Function working

--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Http</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Gaurav App</title>
+    <!-- update the version number as needed -->
+    <script defer src="/__/firebase/8.6.2/firebase-app.js"></script>
+    <!-- include only the Firebase features as you need -->
+    <script defer src="/__/firebase/8.6.2/firebase-functions.js"></script>
+    <script defer src="/__/firebase/8.6.2/firebase-messaging.js"></script>
+    <script defer src="/__/firebase/8.6.2/firebase-storage.js"></script>
+    <script defer src="/__/firebase/8.6.2/firebase-analytics.js"></script>
+    <script defer src="/__/firebase/8.6.2/firebase-remote-config.js"></script>
+    <script defer src="/__/firebase/8.6.2/firebase-performance.js"></script>
+
+    <!-- 
+      initialize the SDK after all desired features are loaded, set useEmulator to false
+      to avoid connecting the SDK to running emulators.
+    -->
+    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
     <link rel="stylesheet" href="assets/styles/main.css" />
     <link rel="stylesheet" href="assets/styles/mapSection.css" />
     <link rel="stylesheet" href="assets/styles/table.css" />
     <script src="/src/test.js" type="module" defer></script>
     <script src="/src/searchBtn.js" type="module" defer></script>
-
     <!-- GOOGLE CHART -->
     <script
       type="text/javascript"
@@ -26,7 +39,6 @@
     <script src="src/app.js" type="module" defer></script>
   </head>
   <body>
-    <!-- Navbar Sidebar -->
     <header>
       <nav>
         <div class="sidebar flex-center">
@@ -66,30 +78,30 @@
         <div class="infected msc">
           <i class="infected-logo fas fa-biohazard"></i>
           <p>Infected</p>
-          <h2>50</h2>
-          <h5>50</h5>
+          <h2 data-target="0" id="counter">0</h2>
+          <h5 data-target="0" id="counter">0</h5>
         </div>
         <div class="active msc">
           <i class="virus-logo fas fa-virus"></i>
           <p>Active</p>
-          <h2>50</h2>
-          <h5>50</h5>
+          <h2 data-target="0" id="counter">50</h2>
+          <h5 data-target="0" id="counter">50</h5>
         </div>
         <div class="deaths msc">
           <i class="skull-logo fas fa-skull-crossbones"></i>
           <p>Deaths</p>
-          <h2>50</h2>
-          <h5>50</h5>
+          <h2 data-target="0" id="counter">50</h2>
+          <h5 data-target="0" id="counter">50</h5>
         </div>
         <div class="recovered msc">
           <i class="plus-logo fas fa-plus"></i>
           <p>Recovered</p>
-          <h2>50</h2>
+          <h2 data-target="0" id="counter">50</h2>
         </div>
         <div class="countries msc">
           <div class="flagGen"><i class="country-logo fas fa-flag"></i></div>
           <p>Countries</p>
-          <h2>237</h2>
+          <h2 data-target="0" id="counter">237</h2>
         </div>
       </div>
       <div class="map-section-map flex-center">
@@ -4767,44 +4779,44 @@
               <div class="flag"></div>
               <h1 id="in">India</h1>
               <p>+21K cases</p>
-              <h3>50</h3>
+              <h3 data-target="0" id="counter">50</h3>
             </li>
             <li>
               <div class="flag"></div>
               <h1 id="us">USA</h1>
               <p>+51K cases</p>
-              <h3>50</h3>
+              <h3 data-target="0" id="counter">50</h3>
             </li>
             <li>
               <div class="flag"></div>
               <h1 id="de">Denmark</h1>
               <p>+51K cases</p>
-              <h3>50</h3>
+              <h3 data-target="0" id="counter">50</h3>
             </li>
             <li>
               <div class="flag"></div>
               <h1 id="fr">France</h1>
               <p>+51K cases</p>
-              <h3>50</h3>
+              <h3 data-target="0" id="counter">50</h3>
             </li>
             <li>
               <div class="flag"></div>
               <h1 id="it">Italy</h1>
               <p>+51K cases</p>
-              <h3>50</h3>
+              <h3 data-target="0" id="counter">50</h3>
             </li>
             <li>
               <div class="flag"></div>
               <h1 id="pk">Pakistan</h1>
               <p>+51K cases</p>
-              <h3>50</h3>
+              <h3 data-target="0" id="counter">50</h3>
             </li>
           </ul>
         </div>
       </div>
       <div class="cases-info-section-part-3">
         <div class="graph">
-          <div id="curve_chart"></div>
+          <div id="curve_chart" style="width: 400px; height: 800px"></div>
         </div>
         <div class="added">
           <span></span>
